--- a/_posts/2020-10-28-git.md
+++ b/_posts/2020-10-28-git.md
@@ -2,10 +2,11 @@
 layout: post
 title: Mac—git的安装与使用
 date: 2020-10-28
-Author: Veronica 
-tags: [tools, github]
+Author: "Veronica" 
+tags:     
+	- tools
 comments: true
-toc: true
+catalog: true
 ---
 
 本文主要介绍了mac下git的安装与使用
